// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`client creates a new client with default values 1`] = `
[
  [
    {
      "credentials": "include",
      "headers": {
        "accept": "application/json",
        "content-type": "application/json; charset=utf-8",
      },
      "prefixUrl": "https://example.io/api",
      "timeout": 1000,
    },
  ],
]
`;

exports[`client sets custom options 1`] = `
[
  [
    {
      "credentials": "same-origin",
      "headers": {
        "accept": "application/json",
        "content-type": "application/json; charset=utf-8",
      },
      "prefixUrl": "https://example.io/api",
      "timeout": 3000,
    },
  ],
]
`;
